history from file added

--- a/mlayer-conf.ini
+++ b/mlayer-conf.ini
@@ -1,3 +1,6 @@
-<Mlayer configuration file>
-file:/C:/Users/aleks/Music/01%20-%20Changes.mp3
-</Mlayer configuration file>
+#Mlayer configuration file
+C:\Users\aleks\Music\01 - Changes.mp3
+C:\Users\aleks\Music\01 - Uptown Funk.mp3
+C:\Users\aleks\Music\01 - Changes.mp3
+C:\Users\aleks\Music\01 - Changes.mp3
+#end
