many things added
play, pause, mute, next, prev, coverArt-unknown, load, config etc.

--- a/mlayer-conf.ini
+++ b/mlayer-conf.ini
@@ -1,6 +1,12 @@
-#Mlayer configuration file
+#Mlayer config
+#Songs
 C:\Users\aleks\Music\01 - Changes.mp3
 C:\Users\aleks\Music\01 - Uptown Funk.mp3
-C:\Users\aleks\Music\01 - Changes.mp3
-C:\Users\aleks\Music\01 - Changes.mp3
+C:\Users\aleks\Music\12 - Nightcore - Moskau.mp3
+C:\Users\aleks\Music\01 - Uptown Funk.mp3
+C:\Users\aleks\Music\04 - Nightcore - Go Go Go.mp3
+C:\Users\aleks\Music\18 - Nightcore - Don't Stop.mp3
+#end
+#Selested
+4
 #end
